--- a/microservices/docker-compose.yml
+++ b/microservices/docker-compose.yml
@@ -6,6 +6,7 @@ services:
       context: ./backend
     ports:
       - "6000:5000"
+      - "8001:8000"
     logging:
       driver: gelf
       options:
@@ -44,3 +45,12 @@ services:
       options:
         gelf-address: "tcp://localhost:12201"
         tag: "aggregate"
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    ports:
+    - 9091:9090
+    command:
+    - --config.file=/etc/prometheus/prometheus.yml
+    volumes:
+    - ./prometheus.yml:/etc/prometheus/prometheus.yml:ro
