--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -4,6 +4,7 @@ RUN mkdir /app
 WORKDIR /app
 ADD requirements.txt /app
 ADD main.py /app
+ADD instrumentation /app/instrumentation
 RUN pip3 install -r requirements.txt
 
 CMD ["python3", "main.py"]
