--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -4,13 +4,8 @@ services:
   redis:
     image: "redis:alpine"
   app:
-    build: ./app
+    build: .
     ports:
       - "8000:8000"
     depends_on:
       - redis
-    logging:
-      driver: gelf
-      options:
-        gelf-address: "tcp://localhost:12201"
-        tag: "app"
