--- a/prometheus/docker-compose.yml
+++ b/prometheus/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     command:
     - --config.file=/etc/prometheus/prometheus.yml
     volumes:
+    - prometheus_data:/prometheus
     - ./prometheus.yml:/etc/prometheus/prometheus.yml:ro
     depends_on:
     - cadvisor
@@ -21,3 +22,15 @@ services:
     - /var/run:/var/run:rw
     - /sys:/sys:ro
     - /var/lib/docker/:/var/lib/docker:ro
+  grafana:
+    image: grafana/grafana
+    ports:
+      - 3000:3000
+    volumes:
+      - grafana_data:/var/lib/grafana
+    environment:
+      - GF_USERS_ALLOW_SIGN_UP=false
+      - GF_DASHBOARDS_JSON_ENABLED=true
+volumes:
+  prometheus_data: {}
+  grafana_data: {}
